--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  </head>
 <body>
   <div class="container">
-    <h1>Can't Stop Dice</h1>
+    <h1 id="title">Can't Stop Dice</h1>
     <script src="scripts.js"></script>
     <button type="button" onClick="window.location.reload();">Roll again</button>
   </div>
