--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
  </head>
 <body>
   <div class="container">
-    <h1 id="title">Can't Stop Dice</h1>
-    <script src="scripts.js"></script>
-    <button type="button" onClick="window.location.reload();">Roll again</button>
+    <div class="card">
+      <h1 id="title">Can't Stop Dice</h1>
+      <script src="scripts.js"></script>
+      <button type="button" onClick="window.location.reload();">Roll again</button>
+    </div>
   </div>
 </body>
 </html>
