Style improved and files on folders

--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Can't Stop Dice Generator</title>
  </head>
 <body>
+
+  <h1 id="title">Can't Stop Dice</h1>
   <div class="container">
-    <div class="card">
-      <h1 id="title">Can't Stop Dice</h1>
-      <script src="scripts.js"></script>
+    <script src="js/scripts.js"></script>
+    <div class="button-wrap">
       <button type="button" onClick="window.location.reload();">Roll again</button>
     </div>
+
   </div>
 </body>
 </html>
