--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <script src="js/scripts.js"></script>
     <div class="button-wrap">
-      <button type="button" onClick="window.location.reload();">Roll again</button>
+      <button type="button" onClick="window.location.reload(false);">Roll again</button>
     </div>
 
   </div>
