--- a/index.html
+++ b/index.html
@@ -14,24 +14,20 @@
     </div>
 
   <!-- SVG Sprite -->
-    <div style="height: 0; width: 0; position: absolute; visibility: hidden;" aria-hidden="true">
-      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" focusable="false">
-        <symbol id="ripply-scott" viewBox="0 0 100 100">
-          <g>
-            <polygon points="5.6,77.4 0,29 39.1,0 83.8,19.3 89.4,67.7 50.3,96.7" />
-            <polygon fill="rgba(255,255,255,0.35)" transform="scale(0.5), translate(50, 50)" points="5.6,77.4 0,29 39.1,0 83.8,19.3 89.4,67.7 50.3,96.7" />
-            <polygon fill="rgba(255,255,255,0.25)" transform="scale(0.25), translate(145, 145)" points="5.6,77.4 0,29 39.1,0 83.8,19.3 89.4,67.7 50.3,96.7" />
-          </g>
-        </symbol>
-      </svg>
-    </div>
+  <div style="height: 0; width: 0; position: absolute; visibility: hidden;" aria-hidden="true">
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" focusable="false">
+      <symbol id="ripply-scott" viewBox="0 0 100 100">
+        <circle id="ripple-shape" cx="1" cy="1" r="1" />
+      </symbol>
+    </svg>
+  </div>
   <!-- /end sprite -->
   <!-- button component -->
     <div class="button-wrap">
       <button id="js-ripple-btn" class="button styl-material" type="button" onClick="globalJS();">
       Roll again
       <svg class="ripple-obj" id="js-ripple">
-        <use width="4" height="4" xlink:href="#ripply-scott" class="js-ripple"></use>
+        <use height="100" width="100" xlink:href="#ripply-scott" class="js-ripple"></use>
       </svg>
       </button>
     </div>
