--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="css/style.css">
   <title>Can't Stop Dice Generator</title>
  </head>
@@ -13,28 +14,16 @@
       <script src="js/scripts.js"></script>
     </div>
 
-  <!-- SVG Sprite -->
-  <div style="height: 0; width: 0; position: absolute; visibility: hidden;" aria-hidden="true">
-    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" focusable="false">
-      <symbol id="ripply-scott" viewBox="0 0 100 100">
-        <circle id="ripple-shape" cx="1" cy="1" r="1" />
-      </symbol>
-    </svg>
-  </div>
-  <!-- /end sprite -->
   <!-- button component -->
     <div class="button-wrap">
-      <button id="js-ripple-btn" class="button styl-material" type="button" onClick="globalJS();">
-      Roll again
-      <svg class="ripple-obj" id="js-ripple">
-        <use height="100" width="100" xlink:href="#ripply-scott" class="js-ripple"></use>
-      </svg>
+      <button id="button" class="button" type="button" onmousedown="globalJS();">
+      <span>Roll again</span>
       </button>
     </div>
   <!-- /end button component -->
 
   </div>
-  <script src="js/TweenMax.min.js"></script>
-  <script src="js/button.js"></script>
+  <script language="JavaScript" type="text/javascript" src="js/jquery.js"></script>
+  <script language="JavaScript" type="text/javascript" src="js/button.js"></script>
 </body>
 </html>
