--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body onload="globalJS();">
 
   <h1 id="title">Can't Stop Dice</h1>
-  <div class="container">
+  <div id="container" class="container">
     <div id="output">
       <script src="js/scripts.js"></script>
     </div>
