--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  </head>
 <body onload="globalJS();">
 
-  <h1 id="title">Can't Stop Dice</h1>
+  <h1 id="title" onclick="changeTheme()">Can't Stop Dice</h1>
   <div id="container" class="container">
     <div id="output">
       <script src="js/scripts.js"></script>
