--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!-- button component -->
     <div class="button-wrap">
-      <button id="button" class="button" type="button" onmousedown="globalJS();">
+      <button id="button" class="button ripple dark" type="button" onmousedown="globalJS();">
       <span>Roll again</span>
       </button>
     </div>
